add properties of match details in POST endpoint
