# gamestats-application/api/dtos.go
@@ -1,6 +1,9 @@
 package api
 
-import "gamestats-domain/entities"
+import (
+	"gamestats-domain/entities"
+	"time"
+)
 
 type UserDto struct {
 	Id       string `json:"id"`
@@ -16,8 +19,8 @@ func ToUserDto(user *entities.User) *UserDto {
 
 type MatchDto struct {
 	ID          string             `json:"id"`
-	DateStarted string             `json:"dateStarted"`
-	DateEnded   string             `json:"dateEnded"`
+	DateStarted time.Time          `json:"dateStarted"`
+	DateEnded   time.Time          `json:"dateEnded"`
 	MatchType   entities.MatchType `json:"matchType"`
 }
 
